# kaihom-agent-v1

./: .gitignore  LICENSE  README.md  pyproject.toml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/phases/01-fastapi-foundation/: 01-01-PLAN.md  01-01-SUMMARY.md  01-PLAN-CHECK.md  01-RESEARCH.md  01-UAT.md
.planning/phases/02-mock-kaihong-business-api/: 02-01-PLAN.md  02-01-SUMMARY.md  02-PLAN-CHECK.md  02-RESEARCH.md  02-VALIDATION.md
.planning/phases/03-file-upload-and-local-storage/: 03-01-PLAN.md  03-01-SUMMARY.md  03-CONTEXT.md  03-DISCUSSION-LOG.md  03-PLAN-CHECK.md  03-RESEARCH.md  03-SECURITY.md  03-UAT.md  (+1 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
app/: __init__.py  main.py
app/api/: agent_tasks.py  health.py  mock_kaihong.py  uploads.py
app/core/: config.py
app/db/: __init__.py  session.py
app/models/: __init__.py  agent_graph_session.py  agent_task.py  draft.py  uploaded_file.py
app/schemas/: __init__.py  agent_tasks.py  clarification.py  mock_kaihong.py  order_draft.py  uploads.py
app/services/: __init__.py  agent_tasks.py  clarification.py  clarification_graph.py  deepseek_client.py  extraction.py  mock_kaihong.py  mock_ocr.py  privacy.py  uploads.py
app/tools/: __init__.py  cleanup_uploads.py
docs/: 凯鸿之翼手机物流订单录入Agent项目书.md  物流订单字段与多单据识别说明.md
tests/: test_agent_tasks.py  test_clarification_api.py  test_clarification_graph.py  test_deepseek_client.py  test_extraction.py  test_health.py  test_mock_kaihong.py  test_privacy.py  test_uploads.py
(+30 files in other folders)
